# quantum-toolbox

./: .gitignore  CMakeLists.txt  CMakeLists.txt-old  Extras.cpp  Extras.h  Grid.cpp  Grid.h  LICENSE  Plotter.cpp  Plotter.h  Potential.cpp  Potential.h  QTPlotter.cpp  QTPlotter.h  README.md  SpeedUpCode  System.cpp  System.h  Todo.txt  Wavefunction.cpp  Wavefunction.h  callgrind.out.18918  callgrind.out.19166  callgrind.out.27105  callgrind.out.27376  main.cpp  moreland.pal  stylefile.gp
DissipationStudies/: 2TreeGaussian.cpp  3TreeGaussian.cpp  4TreeGaussian.cpp  DoublingTreeCoupling.cpp  LinearCoupling.cpp  LinearCouplingShifted.cpp  LinearCouplingWider.cpp  TriangularCoupling.cpp
DissipationStudies/4_Couplings_VC_2_sigmaC_10/: N_3.csv  QuantumToolbox  Tplot.gp
DissipationStudies/4_Couplings_VC_4/: Couplings_4_VC_4
DissipationStudies/4_Couplings_VC_4_sigmaC_5/: N_1.csv
DissipationStudies/4_Couplings_VC_4_sigmaC_5_FWHM/: N_1.csv
DissipationStudies/4_Couplings_VC_8_sigmaC_5/: N_1.csv  QuantumToolbox
DissipationStudies/Base/: AboveBarrier.gp  BDist.gp  Inputs.txt  N_1.gp  N_1_E_0.5.csv  N_1_E_0.9.csv  N_1_E_1.2.csv  N_1_E_1.csv  N_1_E_2.csv  N_2.gp  N_2_E_0.5.csv  N_2_E_0.9.csv  N_2_E_1.2.csv  N_2_E_1.csv  N_2_E_2.csv  N_3.gp  N_3_E_0.5.csv  N_3_E_0.9.csv  N_3_E_1.2.csv  N_3_E_1.csv  N_3_E_2.csv  N_4.gp  N_4_E_0.5.csv  N_4_E_0.9.csv  N_4_E_1.2.csv  N_4_E_1.csv  N_4_E_2.csv  PlotAll.gp  PlotAll_nonlog.gp  Tplot.gp
DissipationStudies/FWHM/: BDist.gp  FWHM  Inputs.txt  N_1_E_0.5.csv  N_2_E_0.5.csv  N_2_E_0.9.csv  N_2_E_1.2.csv  N_2_E_1.csv  N_2_E_2.csv  N_3_E_0.5.csv  N_3_E_0.9.csv  N_3_E_1.2.csv  N_3_E_1.csv  N_3_E_2.csv  N_4_E_0.5.csv  N_4_E_0.9.csv  N_4_E_1.2.csv  N_4_E_1.csv  N_4_E_2.csv  out.out
DissipationStudies/HeightX2/: BDist.gp  DoubleHeight  Inputs.txt  N_1.csv  N_1_E_1.csv  N_1_E_2.csv  N_2_E_0.5.csv  N_2_E_0.9.csv  N_2_E_1.2.csv  N_2_E_1.csv  N_2_E_2.csv  N_3_E_0.5.csv  N_3_E_0.9.csv  N_3_E_1.2.csv  N_3_E_1.csv  N_3_E_2.csv  N_4_E_0.5.csv  N_4_E_0.9.csv  N_4_E_1.2.csv  N_4_E_1.csv  N_4_E_2.csv  out.out
DissipationStudies/ManyCouplings/: AboveBarrier.gp  BDist.gp  BelowBarrier.gp  N_10_E_0.5.csv  N_10_E_0.9.csv  N_10_E_1.2.csv  N_10_E_1.csv  N_10_E_2.csv  PlotAll.gp  Rplot.gp  Tplot.gp
DissipationStudies/NewDoubleWidth/: N_1ChannelsOverTime.csv  N_1_E_0.5.csv  N_1_E_0.9.csv  N_1_E_1.2.csv  N_1_E_1.csv  N_1_E_2.csv  N_2ChannelsOverTime.csv  N_2_E_0.5.csv  N_2_E_0.9.csv  N_2_E_1.2.csv  N_2_E_1.csv  N_2_E_2.csv  N_3ChannelsOverTime.csv  N_3_E_0.5.csv  N_3_E_0.9.csv  N_3_E_1.2.csv  N_3_E_1.csv  N_3_E_2.csv  N_4ChannelsOverTime.csv  N_4_E_0.5.csv  N_4_E_0.9.csv  N_4_E_1.2.csv  N_4_E_1.csv  N_4_E_2.csv  NewWider  Rplot.gp  Tplot.gp  out.out
DissipationStudies/SeparateCoupling/: N_1.csv  N_1ChannelsOverTime.csv  N_1_E_0.5.csv  N_1_E_0.9.csv  N_1_E_1.2.csv  N_1_E_1.csv  N_1_E_2.csv  N_2ChannelsOverTime.csv  N_2_E_0.5.csv  N_2_E_0.9.csv  N_2_E_1.2.csv  N_2_E_1.csv  N_2_E_2.csv  N_3ChannelsOverTime.csv  N_3_E_0.5.csv  N_3_E_0.9.csv  N_3_E_1.2.csv  N_3_E_1.csv  N_3_E_2.csv  N_4ChannelsOverTime.csv  N_4_E_0.5.csv  N_4_E_0.9.csv  (+7 more)
FusionStudies/: 2TreeParabolic.cpp  3TreeParabolic.cpp  4TreeParabolic.cpp  ParabolicPotential.cpp
build-debug/: CMakeCache.txt  Makefile  N_4ChannelsOverTime.csv  N_4_E_200.csv  QuantumToolbox.cbp  cmake_install.cmake
build-release/: BasicError_FinalWF.csv  BasicError_InitWF.csv  BasicError_OneStepWF.csv  CMakeCache.txt  DassoFig8-2.csv  DassoFig8-4.csv  DassoFig80.csv  DassoFig82.csv  DassoFig84.csv  Makefile  QuantumToolbox  QuantumToolbox.cbp  Rplot.gp  Tplot.gp  cmake_install.cmake  kplot.gp  trans.gp  xplot.gp
dev/: CMakeLists.txt  Grid.cpp  Grid.h  library.h
documentation/: README.txt
madplotlib/: Madplotlib.h
qmtoybox tests/: qmtoybox.py  squarebarrier.py
tests/: CoupledSquareBarrier.cpp  CoupledWF.csv  ErrorTest_FreeSpaceGaussianWavepacket.cpp  SquareBarrier.cpp  SquareBarrierIncomingWave.cpp  SquareBarrier_Transmissions.cpp
(+374 files in other folders)
